# 3D-Document-Vector-Visualizer

./: README.md  app.py  generate_large_files.py  pyproject.toml
docs/: 6arnUpB96aY.txt  DsROITyL7wE.txt  s9Qh9fWeOAk.txt  test1.txt  test2.txt  test3.txt  test4.txt  test5.txt
main/: vizualizer_app.py
tests/: main.py
